# score-addon-ndi

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_ndi.cpp  score_addon_ndi.hpp
.github/workflows/: builds-dev.yaml  builds-sdk.yaml  jit.yml  release.yml
Ndi/: InputFactory.cpp  InputFactory.hpp  InputNode.cpp  InputNode.hpp  Loader.cpp  Loader.hpp  OutputFactory.cpp  OutputFactory.hpp  OutputNode.cpp  OutputNode.hpp  OutputSettings.hpp
